2-k3s/17.remote-pi/service.yaml
# Owned by ArgoCD Application "remote-pi".
# Rationale: expose the relay only inside the cluster for Traefik to proxy.
---
apiVersion: v1
kind: Service
metadata:
  name: remote-pi-relay
  namespace: remote-pi
  labels:
    app.kubernetes.io/name: remote-pi-relay
    app.kubernetes.io/component: relay
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: remote-pi-relay
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
